# evfirmware-vcu

./: .cproject  .gitignore  .gitmodules  .mxproject  .project  LICENSE  README.md  STM32F767ZITX_FLASH.ld  System  evfirmware-vcu.ioc  evfirmware-vms.ioc
doc/: components.pu
firmware/src/: CMakeLists.txt  toolchain.cmake
firmware/src/cube-proj/: .cproject  .project  evfirmware-vcu.ioc
firmware/src/cube-proj/Core/Inc/: main.h  stm32f7xx_it.h
firmware/src/cube-proj/Core/Src/: CMakeLists.txt  stm32f7xx_hal_timebase_tim.c
firmware/src/cube-proj/Core/Startup/: CMakeLists.txt
firmware/src/hal/: CMakeLists.txt
firmware/src/hal/stm32f767/: .cproject  .project  CMakeLists.txt
firmware/src/system-lib/: CMakeLists.txt
firmware/src/system-lib/adc/: CMakeLists.txt  adc.c  adc.h
firmware/src/system-lib/can/: CMakeLists.txt  can.c  can.h
firmware/src/system-lib/comm/: CMakeLists.txt
firmware/src/system-lib/comm/i2c/: i2c.h
firmware/src/system-lib/comm/spi/: spi.h
firmware/src/system-lib/comm/uart/: msgframedecode.c  msgframedecode.h  msgframeencode.c  msgframeencode.h  nmeadecode.c  nmeadecode.h  nmeafields.h  uart.c  uart.h
firmware/src/system-lib/crc/: CMakeLists.txt  crc.h
firmware/src/system-lib/depends/: depends.c
firmware/src/system-lib/gpio/: CMakeLists.txt
firmware/src/system-lib/i2c/: CMakeLists.txt  i2c.c  i2c.h
firmware/src/system-lib/io/: CMakeLists.txt
firmware/src/system-lib/io/adc/: DMA triple buffers.drawio  adc.c  adc.h
firmware/src/system-lib/io/gpio/: gpio.h
firmware/src/system-lib/lib/: CMakeLists.txt
firmware/src/system-lib/lib/crc/: crc.c  crc.h
firmware/src/system-lib/lib/depends/: CMakeLists.txt  depends.h
firmware/src/system-lib/lib/logging/: logging.h
firmware/src/system-lib/logging/: CMakeLists.txt  logging.c  logging.h
firmware/src/system-lib/rtc/: CMakeLists.txt  rtc.c  rtc.h
firmware/src/system-lib/spi/: CMakeLists.txt  spi.h
firmware/src/system-lib/tasktimer/: tasktimer.c  tasktimer.h
firmware/src/system-lib/time/: CMakeLists.txt
firmware/src/system-lib/time/rtc/: rtc.h
firmware/src/system-lib/time/tasktimer/: CMakeLists.txt  tasktimer.h
firmware/src/system-lib/uart/: CMakeLists.txt  msgframedecode.c  msgframedecode.h  msgframeencode.c  msgframeencode.h  nmeadecode.c  nmeadecode.h  nmeatypes.c  nmeatypes.h  uart.h
firmware/src/vcu/: CMakeLists.txt
firmware/src/vcu/device/: CMakeLists.txt
firmware/src/vcu/device/bms/: CMakeLists.txt  bms.h  orionBms.c  orionBmsCAN.h
firmware/src/vcu/device/dashboard_output/: CMakeLists.txt  dashboard_output.c  dashboard_output.h
firmware/src/vcu/device/discretesense/: CMakeLists.txt  discretesense.c  discretesense.h
firmware/src/vcu/device/gps/: CMakeLists.txt  gps.c  gps.h
firmware/src/vcu/device/inverter/: CMakeLists.txt  cInverter.c  cInverter.h  cInverterCAN.h  dataConversions.h
firmware/src/vcu/device/pcinterface/: CMakeLists.txt  debugterm.c  debugtermcommands.c  debugtermcommands.h  debugtermlib.h  fieldId.h  messages.h  pcinterface.c  pcinterface.h  periodicupdates.c  requests.c
firmware/src/vcu/device/pdm/: CMakeLists.txt  pdm.c  pdm.h
firmware/src/vcu/device/sdc/: CMakeLists.txt  sdc.h
firmware/src/vcu/startup/: CMakeLists.txt  initialize.c  interrupts.c
firmware/src/vcu/vehicleInterface/: CMakeLists.txt
test/: CMakeLists.txt  Makefile  all_tests  build_dir.mk  generate_report.sh  systemlib-src  systemlib-test  test_common.mk  test_files.mk
test/mock/: FreeRTOS.h  MockLogging.c  MockLogging.h  queue.h  semphr.h  stm32f7xx_hal.h  stream_buffer.h
test/mock/FreeRTOS/: mockQueue.c  mockSemphr.c  mockStreamBuffer.c  mockTask.c
test/mock/lib/logging/: MockLogging.c  MockLogging.h
test/mock/std/: MockStdio.c  MockStdio.h
test/mock/stm32_hal/: MockStm32f7xx_hal.c  MockStm32f7xx_hal.h  MockStm32f7xx_hal_adc.c  MockStm32f7xx_hal_adc.h  MockStm32f7xx_hal_can.c  MockStm32f7xx_hal_can.h  MockStm32f7xx_hal_crc.c  MockStm32f7xx_hal_crc.h  MockStm32f7xx_hal_def.h  MockStm32f7xx_hal_gpio.c  MockStm32f7xx_hal_gpio.h  MockStm32f7xx_hal_tim.h  MockStm32f7xx_hal_uart.c  MockStm32f7xx_hal_uart.h
test/mock/time/tasktimer/: MockTaskTimer.c  MockTaskTimer.h  MockTasktimer.c  MockTasktimer.h
test/test/: CMakeLists.txt  Makefile  all_tests.c  run_tests.c  system_tests.c  test_main.h  vcu_tests.c
test/test/comm/: CMakeLists.txt  Makefile
test/test/comm/can/: CMakeLists.txt  Makefile  TestCan.c  TestCanRunner.c
test/test/comm/i2c/: TestI2C.c
test/test/comm/uart/: CMakeLists.txt  TestMsgFrame.c  TestMsgFrameDecode.c  TestMsgFrameEncode.c  TestUart.c
test/test/device/: CMakeLists.txt
test/test/device/bms/: TestOrionBMS.c
test/test/device/discretesense/: TestDiscreteSense.c
test/test/device/gps/: CMakeLists.txt  TestGps.c
test/test/device/inverter/: CMakeLists.txt  TestCInverter.c
test/test/device/pcdebug/: CMakeLists.txt  TestPCDebug.c
test/test/device/pcinterface/: CMakeLists.txt  TestDebugTerm.c  TestPCInterface.c
test/test/device/pdm/: CMakeLists.txt  TestPdm.c
test/test/device/sdc/: CMakeLists.txt  TestSdc.c
test/test/device/wheelspeed/: TestWheelspeed.c
test/test/io/: CMakeLists.txt  Makefile
test/test/io/adc/: CMakeLists.txt  Makefile  TestAdc.c
test/test/io/gpio/: TestGpio.c
test/test/lib/: CMakeLists.txt
test/test/lib/crc/: CMakeLists.txt  TestCrc.c
test/test/lib/depends/: CMakeLists.txt  TestDepends.c
test/test/lib/logging/: CMakeLists.txt  TestLogMock.c  TestLogging.c
test/test/time/tasktimer/: CMakeLists.txt  TestTaskTimer.c
test/test/vehicleInterface/: CMakeLists.txt  Makefile
test/test/vehicleInterface/vehicleControl/: CMakeLists.txt  TestVehicleControl.c
test/test/vehicleInterface/vehicleState/: CMakeLists.txt  Makefile  TestVehicleState.c
test/test/vehicleLogic/: CMakeLists.txt
test/test/vehicleLogic/stateManager/: CMakeLists.txt  TestFaultManager.c  TestVehicleStateMachine.c  TestVehicleStateManager.c
test/test/vehicleLogic/throttleController/: CMakeLists.txt  TestThrottleController.c  TestTorqueMap.c
test/test/vehicleLogic/watchdogTrigger/: CMakeLists.txt  TestWatchdogTrigger.c
(+312 files in other folders)
