cmake_minimum_required (VERSION 2.8.11)
project(ev_test)

set (CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})

include_directories(${PROJECT_SOURCE_DIR}/../src)
include_directories(${PROJECT_SOURCE_DIR}/mock)
include_directories(${PROJECT_SOURCE_DIR}/test)
include_directories(${PROJECT_SOURCE_DIR}/Unity/src)
include_directories(${PROJECT_SOURCE_DIR}/Unity/extras/fixture/src)
include_directories(${PROJECT_SOURCE_DIR}/Unity/extras/memory/src)

set_property(GLOBAL PROPERTY C_STANDARD 11)

# Compile flags
# Warning flags
add_compile_options(-Wall)
add_compile_options(-Wextra)
add_compile_options(-Wpointer-arith)
add_compile_options(-Wcast-align)
add_compile_options(-Wwrite-strings)
add_compile_options(-Wswitch-default)
add_compile_options(-Wunreachable-code)
add_compile_options(-Winit-self)
add_compile_options(-Wmissing-field-initializers)
add_compile_options(-Wno-unknown-pragmas)
add_compile_options(-Wstrict-prototypes)
add_compile_options(-Wundef)
add_compile_options(-Wold-style-definition)
add_compile_options(-Wdouble-promotion)
add_compile_options(-Wshadow)
add_compile_options(-Wformat=2)
add_compile_options(-Wconversion)
add_compile_options(-Werror)
# Profiling flags
add_compile_options(-g)
add_compile_options(-fprofile-arcs)
add_compile_options(-fstack-usage)
add_compile_options(-ftest-coverage)
add_compile_options(-fprofile-dir=${CMAKE_BINARY_DIR})
# Sanitizers
add_compile_options(-fsanitize=address)
add_compile_options(-fsanitize=pointer-compare)
add_compile_options(-fsanitize=pointer-subtract)
add_compile_options(-fsanitize=undefined)
add_compile_options(-Wall -Wextra -pedantic -Werror)

add_link_options(-lm)
add_link_options(-fsanitize=address)
add_link_options(-fsanitize=pointer-compare)
add_link_options(-fsanitize=pointer-subtract)
add_link_options(-fsanitize=undefined)
add_link_options(-g)
add_link_options(-fprofile-arcs)
add_link_options(-fstack-usage)
add_link_options(-ftest-coverage)
add_link_options(-fprofile-dir=${CMAKE_BINARY_DIR})

add_subdirectory(test)